# unitree_go2_realobs

./: .gitignore  EXPERIMENT_GUIDE.md  PAPER_B_NEWTON_BACKEND_RUNBOOK_KR.md  README.md  REALDATA_COLLECTION_PROTOCOL_KR.txt  solution.txt  모터.txt  해야할것.txt
docs/: PAPER_B_EXECUTION_AND_REAL_ROBOT_GUIDE_KR.md  PAPER_B_MANUSCRIPT_BLUEPRINT_KR.txt  PAPER_B_PRESENTATION_MASTER_KR.txt  PAPER_B_REAL_CONSTANTS_CALIBRATION_KR.txt
unitree_go2_phm/scripts/: list_envs.py  random_agent.py  zero_agent.py
unitree_go2_phm/scripts/real/: offline_governor_eval_from_log.py  run_governor_live_template.py
unitree_go2_phm/scripts/rsl_rl/: compare_default_exposure_c012.py  evaluate.py  evaluate_replay.py  play.py  render_used_motor_ckpt_sweep.sh  run_c012_default_exposure.sh  run_pair_uniform_fromscratch.sh  run_pairuniform_eval_8k.sh  run_reward_tuning_round.sh  train.py
unitree_go2_realobs/: README.md
unitree_go2_realobs/scripts/: list_envs.py  random_agent.py  zero_agent.py
unitree_go2_realobs/scripts/real/: README.md  REAL_LOG_REQUIREMENTS.txt  check_sdk_setup.py  command_schedule_example.yaml  log_collector_sdk2py.py  log_to_replay_csv.py  offline_governor_eval_from_log.py  prune_sdk2_for_go2.py  rosbag_lowstate_to_csv.py  run_governor_live_template.py
unitree_go2_realobs/scripts/real/sdk2_bridge/: CMakeLists.txt  README.md  go2_udp_bridge.cpp
unitree_go2_realobs/scripts/rsl_rl/: audit_paper_b_task_contracts.py  cli_args.py  evaluate.py  governor_utils.py  paper_b_runtime.py  play.py  run_paper_b_core_eval.sh  run_paper_b_core_train.sh  scenario_labels.py  summarize_p95.py  (+2 more)
(+67 files in other folders)
